--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,30 @@
 
   <groupId>UnderstandJenkins_plugin</groupId>
   <artifactId>UnderstandJenkins</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>hpi</packaging>
+  <name>Jenkins Understand Plug-in</name>
+
+    <developers>
+        <developer>
+            <id>yoanPoigneau</id>
+            <name>Yoan Poigneau</name>
+            <timezone>+1</timezone>
+            <roles>
+                <role>Project developer</role>
+                <role>Project maintainer</role>
+            </roles>
+        </developer>
+        <developer>
+            <id>gpouilloux</id>
+            <name>Guillaume Pouilloux</name>
+            <timezone>+1</timezone>
+            <roles>
+                <role>Project developer</role>
+                <role>Project maintainer</role>
+            </roles>
+        </developer>
+    </developers>
 
   <!-- get every artifact through repo.jenkins-ci.org, which proxies all the artifacts that we need -->
   <repositories>
@@ -18,6 +40,19 @@
       <url>http://repo.jenkins-ci.org/public/</url>
     </repository>
   </repositories>
+  
+  
+
+<dependencies>
+  <dependency>
+    <groupId>com.google.guava</groupId>
+    <artifactId>guava</artifactId>
+    <version>12.0-rc1</version>
+    <scope>provided</scope>
+  </dependency>
+</dependencies>
+
+
 
   <pluginRepositories>
     <pluginRepository>
@@ -25,4 +60,9 @@
       <url>http://repo.jenkins-ci.org/public/</url>
     </pluginRepository>
   </pluginRepositories>
+  
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
 </project>
